<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.intuition.restaurantly.RestaurantsActivity">

    <TextView
        android:id="@+id/locationDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Restaurants near "
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/locationDisplay"
        tools:layout_editor_absoluteX="8dp"/>

</android.support.constraint.ConstraintLayout>
